<resources>
    <string name="app_name">Aladdin Express</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="currency_symbol">₹</string>

    <string name="email">AladdinExp@gmail.com</string>
    <string name="phone_number">(+91) 574865874955</string>
    <string name="navigation_drawer_close">close</string>
    <string name="currency_code">INR</string>
    <string name="razorpay_id">rzp_live_hv3JX8LhD9dDdt</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="login_bottom_message">By signup, you will receive an SMS for verifying your mobile number. Data charges may apply.</string>
    <string name="login">Login</string>
    <string name="conatct_us">Contact Us</string>
    <string name="contact_us_message">For any help, reach out to us! We are happy to serve you.</string>
    <string name="demo_email">Email : AladdinExpOfficial@gmail.com</string>
    <string name="demo_number">Contact Number : (+91) 12345 67890</string>
    <string name="view_cart">View Cart</string>
    <string name="sorry_no_product_found_of_this_category">Sorry, No Product Found of this Category.</string>
    <string name="home">Home</string>
    <string name="we_ve_emailed_you_a_confirmation_and_we_ll_notify_you_when_your_order_has_shipped">We\'ve emailed you a confirmation and we\'ll notify you when your order has shipped.</string>
    <string name="please_feel_free_to_contact_us_on_91_8097777676_if_you_have_any_questions_or_concerns">Please feel free to contact us on +91 8097777676 if you have any questions or concerns.</string>
    <string name="thank_you_nfor_your_order">THANK YOU\nFOR YOUR ORDER</string>
    <string name="order_details">Order Details</string>
    <string name="pay_on_pickup">Pay on Pickup</string>
    <string name="address">Address</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_you_received">Enter the Otp you received.</string>
    <string name="by_signup_you_will_receive_an_sms_for_verifying_your_mobile_number_data_charges_may_apply">By signup, you will receive an SMS for verifying your mobile number. Data charges may apply.</string>
    <string name="continue_1">Continue</string>
    <string name="payment_method">Payment Method</string>
    <string name="online_payment">Online Payment</string>
    <string name="pay_online">pay online</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="billing_address">Billing Address</string>
    <string name="pay_on_delivery">pay on delivery</string>
    <string name="back">BACK</string>
    <string name="next_step">NEXT STEP</string>
    <string name="shop_details">Shop Details</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="business_name">Organization Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="locate">Locate</string>
    <string name="landmark">Landmark</string>
    <string name="pincode">Pincode</string>
    <string name="shop_type">Shop Type</string>
    <string name="please_select_appropriate_shop_business_type">Please select appropriate shop/business type.</string>
    <string name="i_agree_to_aladdin_exp">I agree to Aladdin Exp.</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="apply">Apply</string>
    <string name="coupan_code">Coupan Code</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="discounts">Discounts</string>
    <string name="total">Total</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="submission_received">Submission Received</string>
    <string name="your_submission_has_been_received_and_a_represenatative_from_aladdin_exp_will_contact_you_withing_24_hours">Your submission has been received and a represenatative from Aladdin Exp will contact you withing 24 hours.</string>
    <string name="currently_you_don_t_have_any_order_here">Currently you don\'t have any order here.</string>
    <string name="all">All</string>
    <string name="preparing">Preparing</string>
    <string name="dipatched">Dipatched</string>
    <string name="delivered">Delivered</string>
    <string name="search">Search</string>
    <string name="sorry_no_product_found">Sorry, No Product Found.</string>
    <string name="one">1</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="contact_us">Contact Us</string>
    <string name="john_doe">John Doe</string>
    <string name="log_out">Log Out</string>
    <string name="add">Add</string>
    <string name="contact_person">Contact Person</string>
    <string name="one_signal">(+91) 574865874955</string>
    <string name="categories">Categories</string>
</resources>