<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".LoginActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#fff"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:foregroundGravity="left"
                app:srcCompat="@drawable/app_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/welcome"
                android:textColor="#282C35"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/monsterrat_semibold"
                android:text="@string/sign_in_to_continue"
                android:textColor="#808080" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/monsterrat_semibold"
                    android:text="@string/string_phone_number"
                    android:textColor="#808080" />

                <EditText
                    android:id="@+id/phoneNumberLoginBx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:ems="10"
                    android:fontFamily="@font/gilroy_medium"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="#000" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#fff"
        android:fontFamily="@font/inter"
        android:text="@string/login_bottom_message"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/login_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/apptheme"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>