<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="0dp"
    tools:context=".OrderPlaced">

    <androidx.cardview.widget.CardView
        android:id="@+id/go_to_home_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/apptheme"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/home"
            android:textColor="#fff"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView21"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/checkmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/oswald_regular"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/thank_you_nfor_your_order"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/order_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/monsterrat_semibold"
        android:gravity="center"
        android:lineHeight="25dp"
        android:text="@string/we_ve_emailed_you_a_confirmation_and_we_ll_notify_you_when_your_order_has_shipped"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <TextView
        android:id="@+id/order_placed_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/monsterrat_semibold"
        android:gravity="center"
        android:text="@string/please_feel_free_to_contact_us_on_91_8097777676_if_you_have_any_questions_or_concerns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_timestamp" />
</androidx.constraintlayout.widget.ConstraintLayout>