<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ThankYou">

    <androidx.cardview.widget.CardView
        android:id="@+id/contact_us_btn_thank_you"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/apptheme"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/contact_us"
            android:textColor="#fff"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView21"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/checkmark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/oswald_regular"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/submission_received"
        android:textColor="#000"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/monsterrat_semibold"
        android:gravity="center"
        android:text="@string/please_feel_free_to_contact_us_on_91_1234567890_if_you_have_any_questions_or_concerns"
        app:layout_constraintBottom_toTopOf="@+id/contact_us_btn_thank_you"
        app:layout_constraintEnd_toEndOf="@+id/contact_us_btn_thank_you"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/contact_us_btn_thank_you" />


    <TextView
        android:id="@+id/order_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:lineHeight="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/monsterrat_semibold"
        android:gravity="center"
        android:text="@string/your_submission_has_been_received_and_a_represenatative_from_aladdin_exp_will_contact_you_withing_24_hours"
        android:textColor="#7C7C7C"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />
</androidx.constraintlayout.widget.ConstraintLayout>