<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".OtpVerification">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#fff"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:foregroundGravity="left"
                app:srcCompat="@drawable/app_logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/oswald_regular"
                android:text="@string/otp_verification"
                android:textColor="#282C35"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="#808080"
                android:fontFamily="@font/monsterrat_semibold"
                android:text="@string/enter_the_otp_you_received" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="20dp"
                android:background="#fff"
                android:weightSum="6">

                <EditText
                    android:id="@+id/otpBox1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:textColor="#808080"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otpBox2"
                    android:layout_width="match_parent"
                    android:textColor="#808080"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otpBox3"
                    android:layout_width="match_parent"
                    android:textColor="#808080"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_marginEnd="5dp"

                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otpBox4"
                    android:layout_width="match_parent"
                    android:textColor="#808080"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"

                    android:layout_weight="1"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otpBox5"
                    android:layout_width="match_parent"
                    android:textColor="#808080"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"

                    android:layout_marginEnd="5dp"

                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />

                <EditText
                    android:id="@+id/otpBox6"
                    android:layout_width="match_parent"
                    android:textColor="#808080"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"

                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/otp_bg"
                    android:fontFamily="@font/inter"
                    android:gravity="center"
                    android:inputType="phone"
                    android:maxLength="1" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/monsterrat_semibold"
        android:text="@string/by_signup_you_will_receive_an_sms_for_verifying_your_mobile_number_data_charges_may_apply"
        android:textSize="12sp"
        android:textColor="#808080"
        app:layout_constraintBottom_toTopOf="@+id/otp_continue_btn"
        app:layout_constraintEnd_toEndOf="@+id/otp_continue_btn"
        app:layout_constraintStart_toStartOf="@+id/otp_continue_btn" />

    <androidx.cardview.widget.CardView
        android:id="@+id/otp_continue_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:cardBackgroundColor="@color/apptheme"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="@+id/scrollView2">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/oswald_regular"
            android:text="@string/continue_1"
            android:textColor="#fff"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>